# src/openapi/paths/auth.yaml
@@ -7,7 +7,8 @@ paths:
       summary: Register as user
       tags: [Auth]
       security:
-        - ApiKeyAuth: ['sssss']
+        - ApiKeyAuth: []
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -40,42 +41,82 @@ paths:
         "400":
           description:  Bad Request
           
-#   /v1/auth/login:
-#     post:
-#       summary: Login
-#       tags: [Auth]
-#       requestBody:
-#         required: true
-#         content:
-#           application/json:
-#             schema:
-#               type: object
-#               required:
-#                 - email
-#                 - password
-#               properties:
-#                 email:
-#                   type: string
-#                   format: email
-#                 password:
-#                   type: string
-#                   format: password
-#               example:
-#                 email: name@example.com
-#                 password: password1
-#       responses:
-#         "200":
-#           description: OK
-#           content:
-#             application/json:
-#               schema:
-#                 type: object
-#                 properties:
-#                   data:
-#                     $ref: '#/components/schemas/User'
-#                   access_token:
-#                     type: string
-#                     example: token
+  /access/shop/login:
+    post:
+      summary: Login
+      tags: [Auth]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+                  format: password
+              example:
+                email: nhantest@example.com
+                password: password1
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    # $ref: '#/components/schemas/User'
+                  access_token:
+                    type: string
+                    example: token
 
-#         "400":
-#           description: Invalid email or password
+        "400":
+          description: Invalid email or password
+      
+  /access/shop/logout:
+    post:
+      summary: Logout
+      description: Logged in users can fetch only their own user information.
+      tags: [Auth]
+      security:
+        - bearerAuth: []
+        - clientId: []
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+
+/access/shop/refresh-token:
+    post:
+      summary: refresh-token
+      tags: [Auth]
+      security:
+        - bearerAuth: []
+        - clientId: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - refreshToken
+              properties:
+                refreshToken:
+                  type: string
+              example:
+                refreshToken:  refreshToken
+      responses:
+        "200":
+          description: Created
+        "400":
+          description:  Bad Request
